crates/gwsim-data/tests/snapshots/data_tree__an_unknown_field.snap
---
source: crates/gwsim-data/tests/data_tree.rs
expression: report(&source)
---
creatures/foes/kournan/kournan-seer.ron:
  warning: A-004 has no value yet, so anything depending on this file is uncalibrated

skills/mesmer/energy-surge.ron:
  12:5 error: recharge_time: there is no field named `recharge_time` here; did you mean `recharge`?

1 error, 1 warning in 2 files
