crates/gwsim-data/tests/snapshots/data_tree__bad_ron_syntax.snap
---
source: crates/gwsim-data/tests/data_tree.rs
expression: report(&source)
---
creatures/foes/kournan/kournan-seer.ron:
  warning: A-004 has no value yet, so anything depending on this file is uncalibrated

skills/mesmer/energy-surge.ron:
  3:25 error: Expected comma

1 error, 1 warning in 2 files
